--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^8.42.0",
     "nodemon": "^2.0.22"
   },
   "dependencies": {
