--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Moview es una plataforma de reseñas de películas (repositorio con propósitos académicos)",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint . --ext .js",
     "dev": "nodemon index.js",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,10 +12,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^8.42.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "standard": "^17.1.0"
   },
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "eslintConfig": {
+    "extends": "./node_modules/standard/eslinrc.json"
   }
 }
