--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "dependencies": {
     "cors": "2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^7.3.2"
   },
   "eslintConfig": {
     "extends": "./node_modules/standard/eslinrc.json"
