--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "standard": "^17.1.0"
   },
   "dependencies": {
+    "@sentry/node": "^7.57.0",
+    "bcrypt": "^5.1.0",
     "cors": "2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.3.2"
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.3.2",
+    "mongoose-unique-validator": "^4.0.0"
   },
   "eslintConfig": {
     "extends": "./node_modules/standard/eslinrc.json"
