--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
+    "react-bootstrap-typeahead": "^6.2.3",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^2.1.0",
     "react-responsive-carousel": "^3.2.23",
